# rust-tauri-tools

./: .gitignore  BUILD_AND_RELEASE.md  CHANGELOG.md  CODEBUDDY.md  FINAL_VERIFICATION.md  QUICKSTART.md  README.md  RELEASE_GUIDE.md  RUN_GUIDE.md  VERIFICATION_REPORT.md  index.html  package-lock.json  package.json  tauri.conf.json
.github/workflows/: tauri-build.yml
scripts/: extract-changelog.js
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs
src/api/: passwords.ts  tasks.ts
src/components/: CalendarTaskForm.vue  CalendarView.vue  DataManager.vue  PasswordForm.vue  QuadrantView.vue  SearchFilterPanel.vue  Sidebar.vue  SubtaskList.vue  TaskForm.vue  TaskItem.vue  TaskList.vue
src/stores/: password.ts  task.ts
src/types/: index.ts
src/utils/: dateUtils.ts  retryUtils.ts
src/views/: HomeView.vue  PasswordView.vue  TaskView.vue
